--- a/index.html
+++ b/index.html
@@ -31,12 +31,15 @@
         </nav>
 
         <ul class="contacts list">
-          <li class="item">
+          <li class="item mail">
             <a href="mailto:info@devstudio.com" class="link">
+              <svg>
+                <use href="./images/icons/sprite.svg#icon-mail"></use>
+              </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="item">
+          <li class="item pfone">
             <a href="tel:+380961111111" class="link"> +38 096 111 11 11 </a>
           </li>
         </ul>
@@ -57,28 +60,28 @@
         <div class="conteiner advantages">
           <h2 class="section-title">Преимущества</h2>
           <ul class="advantages-list list">
-            <li class="advantages-item">
+            <li class="advantages-item antenna">
               <h3 class="advantages-title">Внимание к деталям</h3>
               <p class="advantages-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item clock">
               <h3 class="advantages-title">Пунктуальность</h3>
               <p class="advantages-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item diagram">
               <h3 class="advantages-title">Планирование</h3>
               <p class="advantages-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item astronaut">
               <h3 class="advantages-title">Современные технологии</h3>
               <p class="advantages-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -140,46 +143,46 @@
               <div class="team-desc">
                 <h3 class="team-names">Николай Кучеренко</h3>
                 <p class="team-function">Product Designer</p>
-                <ul>
-                  <li>
+                <ul class="list social-list">
+                  <li class="social-item">
                     <a
                       href="https://www.instagram.com"
                       target="blank"
                       rel="noopener"
                       aria-label="Ссылка на Instagram"
+                      class="link social-links instagram"
                     >
-                      Instagram</a
-                    >
+                    </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a
                       href="https://twitter.com/explore"
                       target="blank"
                       rel="noopener"
                       aria-label="Ссылка на Twitter"
+                      class="link social-links twitter"
                     >
-                      Twitter</a
-                    >
+                    </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a
                       href="https://www.facebook.com"
                       target="blank"
                       rel="noopener"
                       aria-label="Ссылка на Facebook"
+                      class="link social-links facebook"
                     >
-                      Facebook</a
-                    >
+                    </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a
                       href="https://linkedin.com/"
                       target="blank"
                       rel="noopener"
                       aria-label="Ссылка на LinkedIn"
+                      class="link social-links linkedin"
                     >
-                      LinkedIn</a
-                    >
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -194,46 +197,46 @@
               <div class="team-desc">
                 <h3 class="team-names">Ольга Иванова</h3>
                 <p class="team-function">Frontend Developer</p>
-                <ul>
-                  <li>
+                <ul class="list social-list">
+                  <li class="social-item">
                     <a
                       href="https://www.instagram.com"
                       target="blank"
                       rel="noopener"
                       aria-label="Ссылка на Instagram"
+                      class="link social-links instagram"
                     >
-                      Instagram</a
-                    >
+                    </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a
                       href="https://twitter.com/explore"
                       target="blank"
                       rel="noopener"
                       aria-label="Ссылка на Twitter"
+                      class="link social-links twitter"
                     >
-                      Twitter</a
-                    >
+                    </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a
                       href="https://www.facebook.com"
                       target="blank"
                       rel="noopener"
                       aria-label="Ссылка на Facebook"
+                      class="link social-links facebook"
                     >
-                      Facebook</a
-                    >
+                    </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a
                       href="https://linkedin.com/"
                       target="blank"
                       rel="noopener"
                       aria-label="Ссылка на LinkedIn"
+                      class="link social-links linkedin"
                     >
-                      LinkedIn</a
-                    >
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -248,46 +251,46 @@
               <div class="team-desc">
                 <h3 class="team-names">Андрей Шевченко</h3>
                 <p class="team-function">Marketing</p>
-                <ul>
-                  <li>
+                <ul class="list social-list">
+                  <li class="social-item">
                     <a
                       href="https://www.instagram.com"
                       target="blank"
                       rel="noopener"
                       aria-label="Ссылка на Instagram"
+                      class="link social-links instagram"
                     >
-                      Instagram</a
-                    >
+                    </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a
                       href="https://twitter.com/explore"
                       target="blank"
                       rel="noopener"
                       aria-label="Ссылка на Twitter"
+                      class="link social-links twitter"
                     >
-                      Twitter</a
-                    >
+                    </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a
                       href="https://www.facebook.com"
                       target="blank"
                       rel="noopener"
                       aria-label="Ссылка на Facebook"
+                      class="link social-links facebook"
                     >
-                      Facebook</a
-                    >
+                    </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a
                       href="https://linkedin.com/"
                       target="blank"
                       rel="noopener"
                       aria-label="Ссылка на LinkedIn"
+                      class="link social-links linkedin"
                     >
-                      LinkedIn</a
-                    >
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -302,46 +305,46 @@
               <div class="team-desc">
                 <h3 class="team-names">Иван Николаев</h3>
                 <p class="team-function">UI Designer</p>
-                <ul>
-                  <li>
+                <ul class="list social-list">
+                  <li class="social-item">
                     <a
                       href="https://www.instagram.com"
                       target="blank"
                       rel="noopener"
                       aria-label="Ссылка на Instagram"
+                      class="link social-links instagram"
                     >
-                      Instagram</a
-                    >
+                    </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a
                       href="https://twitter.com/explore"
                       target="blank"
                       rel="noopener"
                       aria-label="Ссылка на Twitter"
+                      class="link social-links twitter"
                     >
-                      Twitter</a
-                    >
+                    </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a
                       href="https://www.facebook.com"
                       target="blank"
                       rel="noopener"
                       aria-label="Ссылка на Facebook"
+                      class="link social-links facebook"
                     >
-                      Facebook</a
-                    >
+                    </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a
                       href="https://linkedin.com/"
                       target="blank"
                       rel="noopener"
                       aria-label="Ссылка на LinkedIn"
+                      class="link social-links linkedin"
                     >
-                      LinkedIn</a
-                    >
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -354,8 +357,11 @@
       <section class="section">
         <div class="conteiner">
           <h2 class="section-title">Постоянные клиенты</h2>
+
           <ul class="clients-list list">
-            <li class="clients-item"><a href="">Company tagline here</a></li>
+            <li class="clients-item">
+              <a href="">Company tagline here</a>
+            </li>
             <li class="clients-item"><a href="">YA & CO</a></li>
             <li class="clients-item"><a href="">Company</a></li>
             <li class="clients-item"><a href="">FOSTER PETERS</a></li>
