--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <ul class="engage-list list">
             <li class="engage-item">
               <img
-                src="./images/desktop.jpg"
+                src="./images/img1.jpg"
                 class="img"
                 alt="ноутбук"
                 width="370"
@@ -108,7 +108,7 @@
             </li>
             <li class="engage-item">
               <img
-                src="./images/phone.jpg"
+                src="./images/img2.jpg"
                 alt="смартфон"
                 width="370"
                 class="img"
@@ -117,7 +117,7 @@
             </li>
             <li class="engage-item">
               <img
-                src="./images/design.jpg"
+                src="./images/img3.jpg"
                 alt="монитор"
                 width="370"
                 class="img"
@@ -135,13 +135,13 @@
           <ul class="team-list list">
             <li class="team-item">
               <img
-                src="./images/nikoiay.jpg"
+                src="./images/1.jpg"
                 alt=""
                 width="270"
                 class="team-foto img"
               />
               <div class="team-desc">
-                <h3 class="team-names">Николай Кучеренко</h3>
+                <h3 class="team-names">Игорь Демьяненко</h3>
                 <p class="team-function">Product Designer</p>
                 <ul class="list social-list">
                   <li class="social-item">
@@ -189,13 +189,13 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/olga.jpg"
+                src="./images/2.jpg"
                 alt=""
                 width="270"
                 class="team-foto img"
               />
               <div class="team-desc">
-                <h3 class="team-names">Ольга Иванова</h3>
+                <h3 class="team-names">Ольга Репина</h3>
                 <p class="team-function">Frontend Developer</p>
                 <ul class="list social-list">
                   <li class="social-item">
@@ -243,13 +243,13 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/andrey.jpg"
+                src="./images/3.jpg"
                 alt=""
                 width="270"
                 class="team-foto img"
               />
               <div class="team-desc">
-                <h3 class="team-names">Андрей Шевченко</h3>
+                <h3 class="team-names">Николай Тарасов</h3>
                 <p class="team-function">Marketing</p>
                 <ul class="list social-list">
                   <li class="social-item">
@@ -297,13 +297,13 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/ivan.jpg"
+                src="./images/4.jpg"
                 alt=""
                 width="270"
                 class="team-foto img"
               />
               <div class="team-desc">
-                <h3 class="team-names">Иван Николаев</h3>
+                <h3 class="team-names">Михаил Ермаков</h3>
                 <p class="team-function">UI Designer</p>
                 <ul class="list social-list">
                   <li class="social-item">
