добавляет иконки на страницу

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,13 +31,21 @@
         </nav>
 
         <ul class="contacts list">
-          <li class="item">
+          <li class="item mail">
             <a href="mailto:info@devstudio.com" class="link">
+              <svg class="icon-mail">
+                <use href="./images/icons/sprite.svg#icon-mail"></use>
+              </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="link"> +38 096 111 11 11 </a>
+          <li class="item pfone">
+            <a href="tel:+380961111111" class="link">
+              <svg class="icon-phone">
+                <use href="./images/icons/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -47,7 +55,7 @@
       <!-- Порфолио -->
       <section class="portfolio">
         <div class="conteiner">
-          <h1 class="section-title">Портфолио</h1>
+          <h1 class="section-title visually-hidden">Портфолио</h1>
           <ul class="filter-list list">
             <li class="btn"><button class="btn-portfolio">Все</button></li>
             <li class="btn">
@@ -70,11 +78,9 @@
                   коронавируса. Компании используют эту платформу для цифрового
                   шпионажа и атак на защищённые сервера конкурентовы.
                 </p> -->
-                <img
-                  src="./images/portfolio/img.jpg"
-                  alt=""
-                  class="img portfolio-img"
-                />
+                <div class="portfolio-img">
+                  <img src="./images/portfolio/img.jpg" alt="" class="img" />
+                </div>
                 <div class="portfolio-desc">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -83,11 +89,13 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/goldenstar.jpg"
-                  alt=""
-                  class="img portfolio-img"
-                />
+                <div class="portfolio-img">
+                  <img
+                    src="./images/portfolio/goldenstar.jpg"
+                    alt=""
+                    class="img"
+                  />
+                </div>
                 <div class="portfolio-desc">
                   <h2 class="portfolio-title">
                     Постер New Orlean vs Golden Star
@@ -99,11 +107,13 @@
 
             <li class="portfolio-card">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/seafood.jpg"
-                  alt=""
-                  class="img portfolio-img"
-                />
+                <div class="portfolio-img">
+                  <img
+                    src="./images/portfolio/seafood.jpg"
+                    alt=""
+                    class="img"
+                  />
+                </div>
                 <div class="portfolio-desc">
                   <h2 class="portfolio-title">Ресторан Seafood</h2>
                   <p class="portfolio-text">Приложение</p>
@@ -112,11 +122,9 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/prime.jpg"
-                  alt=""
-                  class="img portfolio-img"
-                />
+                <div class="portfolio-img">
+                  <img src="./images/portfolio/prime.jpg" alt="" class="img" />
+                </div>
                 <div class="portfolio-desc">
                   <h2 class="portfolio-title">Проект Prime</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -125,11 +133,9 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/boxes.jpg"
-                  alt=""
-                  class="img portfolio-img"
-                />
+                <div class="portfolio-img">
+                  <img src="./images/portfolio/boxes.jpg" alt="" class="img" />
+                </div>
                 <div class="portfolio-desc">
                   <h2 class="portfolio-title">Проект Boxes</h2>
                   <p class="portfolio-text">Приложение</p>
@@ -139,11 +145,13 @@
 
             <li class="portfolio-card">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/insriration.jpg"
-                  alt=""
-                  class="img portfolio-img"
-                />
+                <div class="portfolio-img">
+                  <img
+                    src="./images/portfolio/insriration.jpg"
+                    alt=""
+                    class="img"
+                  />
+                </div>
                 <div class="portfolio-desc">
                   <h2 class="portfolio-title">Inspiration has no Borders</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -152,11 +160,13 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/limitededition.jpg"
-                  alt=""
-                  class="img portfolio-img"
-                />
+                <div class="portfolio-img">
+                  <img
+                    src="./images/portfolio/limitededition.jpg"
+                    alt=""
+                    class="img"
+                  />
+                </div>
                 <div class="portfolio-desc">
                   <h2 class="portfolio-title">Издание Limited Edition</h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -165,11 +175,9 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/lab.jpg"
-                  alt=""
-                  class="img portfolio-img"
-                />
+                <div class="portfolio-img">
+                  <img src="./images/portfolio/lab.jpg" alt="" class="img" />
+                </div>
                 <div class="portfolio-desc">
                   <h2 class="portfolio-title">Проект LAB</h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -178,11 +186,13 @@
             </li>
             <li class="portfolio-card">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio/growingbusiness.jpg"
-                  alt=""
-                  class="img portfolio-img"
-                />
+                <div class="portfolio-img">
+                  <img
+                    src="./images/portfolio/growingbusiness.jpg"
+                    alt=""
+                    class="img"
+                  />
+                </div>
                 <div class="portfolio-desc">
                   <h2 class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-text">Приложение</p>
@@ -216,50 +226,58 @@
 
         <div class="footer-box">
           <h3 class="join">Присоединяйтесь</h3>
-          <ul class="list">
-            <li>
+          <ul class="list link join-list">
+            <li class="join-item">
               <a
                 href="https://www.instagram.com"
                 target="blank"
                 rel="noopener"
                 aria-label="Ссылка на Instagram"
-                class="link"
+                class="link social-links join-link"
               >
-                Instagram</a
-              >
+                <svg class="icon icon-instagram" width="20" height="20">
+                  <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li>
+            <li class="join-item">
               <a
                 href="https://twitter.com/explore"
                 target="blank"
                 rel="noopener"
                 aria-label="Ссылка на Twitter"
-                class="link"
+                class="link social-links join-link"
               >
-                Twitter</a
-              >
+                <svg class="icon icon-twiter" width="20" height="20">
+                  <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li>
+            <li class="join-item">
               <a
                 href="https://www.facebook.com/"
                 target="blank"
                 rel="noopener"
                 aria-label="Ссылка на Facebook"
-                class="link"
+                class="link social-links join-link"
               >
-                Facebook</a
-              >
+                <svg class="icon icon-facebook" width="20" height="20">
+                  <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
-            <li>
+            <li class="join-item">
               <a
                 href="https://linkedin.com/"
                 target="blank"
                 rel="noopener"
                 aria-label="Ссылка на LinkedIn"
-                class="link"
+                class="link social-links join-link"
               >
-                LinkedIn</a
-              >
+                <svg class="icon icon-linkedin" width="20" height="20">
+                  <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
