--- a/index.html
+++ b/index.html
@@ -33,14 +33,19 @@
         <ul class="contacts list">
           <li class="item mail">
             <a href="mailto:info@devstudio.com" class="link">
-              <svg>
+              <svg class="icon-mail">
                 <use href="./images/icons/sprite.svg#icon-mail"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
           <li class="item pfone">
-            <a href="tel:+380961111111" class="link"> +38 096 111 11 11 </a>
+            <a href="tel:+380961111111" class="link">
+              <svg class="icon-phone">
+                <use href="./images/icons/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -61,6 +66,11 @@
           <h2 class="section-title">Преимущества</h2>
           <ul class="advantages-list list">
             <li class="advantages-item antenna">
+              <div class="icons-advantages">
+                <svg class="icon-antenna" width="65" height="70">
+                  <use href="./images/icons/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Внимание к деталям</h3>
               <p class="advantages-text">
                 Идейные соображения, а также начало повседневной работы по
@@ -68,6 +78,11 @@
               </p>
             </li>
             <li class="advantages-item clock">
+              <div class="icons-advantages">
+                <svg class="icon-clock" width="67" height="70">
+                  <use href="./images/icons/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Пунктуальность</h3>
               <p class="advantages-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -75,6 +90,11 @@
               </p>
             </li>
             <li class="advantages-item diagram">
+              <div class="icons-advantages">
+                <svg class="icon-diagram" width="70" height="54">
+                  <use href="./images/icons/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Планирование</h3>
               <p class="advantages-text">
                 Равным образом консультация с широким активом в значительной
@@ -82,6 +102,11 @@
               </p>
             </li>
             <li class="advantages-item astronaut">
+              <div class="icons-advantages">
+                <svg class="icon-astronaut" width="70" height="70">
+                  <use href="./images/icons/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="advantages-title">Современные технологии</h3>
               <p class="advantages-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -152,6 +177,11 @@
                       aria-label="Ссылка на Instagram"
                       class="link social-links instagram"
                     >
+                      <svg class="icon icon-instagram" width="20" height="20">
+                        <use
+                          href="./images/icons/sprite.svg#icon-instagram"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="social-item">
@@ -162,6 +192,11 @@
                       aria-label="Ссылка на Twitter"
                       class="link social-links twitter"
                     >
+                      <svg class="icon icon-twiter" width="20" height="20">
+                        <use
+                          href="./images/icons/sprite.svg#icon-twitter"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="social-item">
@@ -172,6 +207,11 @@
                       aria-label="Ссылка на Facebook"
                       class="link social-links facebook"
                     >
+                      <svg class="icon icon-facebook" width="20" height="20">
+                        <use
+                          href="./images/icons/sprite.svg#icon-facebook"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="social-item">
@@ -182,6 +222,11 @@
                       aria-label="Ссылка на LinkedIn"
                       class="link social-links linkedin"
                     >
+                      <svg class="icon icon-linkedin" width="20" height="20">
+                        <use
+                          href="./images/icons/sprite.svg#icon-linkedin"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -206,6 +251,11 @@
                       aria-label="Ссылка на Instagram"
                       class="link social-links instagram"
                     >
+                      <svg class="icon icon-instagram" width="20" height="20">
+                        <use
+                          href="./images/icons/sprite.svg#icon-instagram"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="social-item">
@@ -216,6 +266,11 @@
                       aria-label="Ссылка на Twitter"
                       class="link social-links twitter"
                     >
+                      <svg class="icon icon-twiter" width="20" height="20">
+                        <use
+                          href="./images/icons/sprite.svg#icon-twitter"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="social-item">
@@ -226,6 +281,11 @@
                       aria-label="Ссылка на Facebook"
                       class="link social-links facebook"
                     >
+                      <svg class="icon icon-facebook" width="20" height="20">
+                        <use
+                          href="./images/icons/sprite.svg#icon-facebook"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="social-item">
@@ -236,6 +296,11 @@
                       aria-label="Ссылка на LinkedIn"
                       class="link social-links linkedin"
                     >
+                      <svg class="icon icon-linkedin" width="20" height="20">
+                        <use
+                          href="./images/icons/sprite.svg#icon-linkedin"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -260,6 +325,11 @@
                       aria-label="Ссылка на Instagram"
                       class="link social-links instagram"
                     >
+                      <svg class="icon icon-instagram" width="20" height="20">
+                        <use
+                          href="./images/icons/sprite.svg#icon-instagram"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="social-item">
@@ -270,6 +340,11 @@
                       aria-label="Ссылка на Twitter"
                       class="link social-links twitter"
                     >
+                      <svg class="icon icon-twiter" width="20" height="20">
+                        <use
+                          href="./images/icons/sprite.svg#icon-twitter"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="social-item">
@@ -280,6 +355,11 @@
                       aria-label="Ссылка на Facebook"
                       class="link social-links facebook"
                     >
+                      <svg class="icon icon-facebook" width="20" height="20">
+                        <use
+                          href="./images/icons/sprite.svg#icon-facebook"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="social-item">
@@ -290,6 +370,11 @@
                       aria-label="Ссылка на LinkedIn"
                       class="link social-links linkedin"
                     >
+                      <svg class="icon icon-linkedin" width="20" height="20">
+                        <use
+                          href="./images/icons/sprite.svg#icon-linkedin"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -314,6 +399,11 @@
                       aria-label="Ссылка на Instagram"
                       class="link social-links instagram"
                     >
+                      <svg class="icon icon-instagram" width="20" height="20">
+                        <use
+                          href="./images/icons/sprite.svg#icon-instagram"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="social-item">
@@ -324,6 +414,11 @@
                       aria-label="Ссылка на Twitter"
                       class="link social-links twitter"
                     >
+                      <svg class="icon icon-twiter" width="20" height="20">
+                        <use
+                          href="./images/icons/sprite.svg#icon-twitter"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="social-item">
@@ -334,6 +429,11 @@
                       aria-label="Ссылка на Facebook"
                       class="link social-links facebook"
                     >
+                      <svg class="icon icon-facebook" width="20" height="20">
+                        <use
+                          href="./images/icons/sprite.svg#icon-facebook"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                   <li class="social-item">
@@ -344,6 +444,11 @@
                       aria-label="Ссылка на LinkedIn"
                       class="link social-links linkedin"
                     >
+                      <svg class="icon icon-linkedin" width="20" height="20">
+                        <use
+                          href="./images/icons/sprite.svg#icon-linkedin"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -360,13 +465,47 @@
 
           <ul class="clients-list list">
             <li class="clients-item">
-              <a href="">Company tagline here</a>
+              <a href="" class="clients-link">
+                <svg class="icon clients-logo" width="44" height="49">
+                  <use href="./images/icons/sprite.svg#icon-logo1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="clients-item"><a href="">YA & CO</a></li>
-            <li class="clients-item"><a href="">Company</a></li>
-            <li class="clients-item"><a href="">FOSTER PETERS</a></li>
-            <li class="clients-item"><a href="">Brand</a></li>
-            <li class="clients-item"><a href="">Company tagline</a></li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="icon clients-logo" width="40" height="52">
+                  <use href="./images/icons/sprite.svg#icon-logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="icon clients-logo" width="41" height="42">
+                  <use href="./images/icons/sprite.svg#icon-logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="icon clients-logo" width="80" height="42">
+                  <use href="./images/icons/sprite.svg#icon-logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="icon clients-logo" width="59" height="47">
+                  <use href="./images/icons/sprite.svg#icon-logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="icon clients-logo" width="88" height="45">
+                  <use href="./images/icons/sprite.svg#icon-logo6"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </section>
@@ -394,50 +533,58 @@
 
         <div class="footer-box">
           <h3 class="join">Присоединяйтесь</h3>
-          <ul class="list link">
-            <li>
+          <ul class="list link join-list">
+            <li class="join-item">
               <a
                 href="https://www.instagram.com"
                 target="blank"
                 rel="noopener"
                 aria-label="Ссылка на Instagram"
-                class="link"
+                class="link social-links join-link"
               >
-                Instagram</a
-              >
+                <svg class="icon icon-instagram" width="20" height="20">
+                  <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li>
+            <li class="join-item">
               <a
                 href="https://twitter.com/explore"
                 target="blank"
                 rel="noopener"
                 aria-label="Ссылка на Twitter"
-                class="link"
+                class="link social-links join-link"
               >
-                Twitter</a
-              >
+                <svg class="icon icon-twiter" width="20" height="20">
+                  <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li>
+            <li class="join-item">
               <a
                 href="https://www.facebook.com/"
                 target="blank"
                 rel="noopener"
                 aria-label="Ссылка на Facebook"
-                class="link"
+                class="link social-links join-link"
               >
-                Facebook</a
-              >
+                <svg class="icon icon-facebook" width="20" height="20">
+                  <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
-            <li>
+            <li class="join-item">
               <a
                 href="https://linkedin.com/"
                 target="blank"
                 rel="noopener"
                 aria-label="Ссылка на LinkedIn"
-                class="link"
+                class="link social-links join-link"
               >
-                LinkedIn</a
-              >
+                <svg class="icon icon-linkedin" width="20" height="20">
+                  <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
