--- a/portfolio.html
+++ b/portfolio.html
@@ -215,11 +215,13 @@
             г. Киев, пр-т Леси Украинки, 26
             <ul class="list">
               <li>
-                <a href="mailto:info@devstudio.com">
+                <a href="mailto:info@devstudio.com" class="link">
                   info@devstudio.com
                 </a>
               </li>
-              <li><a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
+              <li>
+                <a href="tel:+380961111111" class="link"> +38 096 111 11 11 </a>
+              </li>
             </ul>
           </address>
         </div>
